# countdown_timer

./: .gitignore  README.md  main.py  pyproject.toml  test_timer.py
countdown_timer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
