[project]
name = "countdown-timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.2",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
presentation-timer = "main:main"
